# Concrete-Course-Design

./: .env.example  .gitignore  LICENSE  README.md  build_win.py  docker-compose.yml  docker-compose.yml.example
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: checks.py  config.py  logging_config.py  main.py  materials.py  security.py
backend/app/api/: projects.py  snapshots.py
backend/app/auth/: dependencies.py  repository.py  router.py
backend/app/calc/: materials.py
backend/app/data/: connection.py  project_repository.py
backend/app/models/: beam.py  main_beam.py  project.py  slab.py  user.py
backend/app/solvers/: common.py  derive.py
backend/app/solvers/beam/: solver.py  utils.py
backend/app/solvers/main_beam/: solver.py  utils.py
backend/app/solvers/slab/: solver.py  utils.py
backend/tests/: conftest.py  test_auth.py  test_beam.py  test_beam_orchestration.py  test_calculate_api.py  test_checks.py  test_common.py  test_main_beam.py  test_project_repository.py  test_projects_api.py  test_slab_orchestration.py  test_slab_reinforcement.py  test_slab_utils.py  test_snapshots_api.py  test_teacher_validation.py
docs/: README.md  功能详解.md  安装与运行.md  已知不足与改进方向.md  开发指南.md  想法记录.txt  技术架构.md  板计算-参考网站比对记录.md  求解器与参考网站比对记录.md  求解器问题记录.md  测试与验证.md  计算方法与公式.md  课程背景与设计目标.md
docs/superpowers/plans/: 2026-06-27-frontend-shell-layout.md  (+1 more)
docs/课设要求/: 2026版_钢筋混凝土课程设计任务书_程序设计版.md  2026版水工钢筋混凝土课程设计.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: main.ts
(+66 files in other folders)
